Implement an interpreter for the NAMELESS language

--- a/05-ch3/interpreters/NAMELESS/nameless.cabal
+++ b/05-ch3/interpreters/NAMELESS/nameless.cabal
@@ -10,9 +10,12 @@ library
     Nameless.Interpreter
 
   other-modules:
-    Nameless.AST
-    Nameless.Env
+    Nameless.AST.AST
+    Nameless.AST.Nameless
+    Nameless.Env.Nameless
+    Nameless.Env.Static
     Nameless.Parser
+    Nameless.Translator
 
   build-depends:
     base >= 4.7 && < 5,
