Implement an interpreter for the EXPLICIT-REFS language

--- a/06-ch4/interpreters/EXPLICIT-REFS/explicit-refs.cabal
+++ b/06-ch4/interpreters/EXPLICIT-REFS/explicit-refs.cabal
@@ -13,6 +13,7 @@ library
     ExplicitRefs.AST
     ExplicitRefs.Env
     ExplicitRefs.Parser
+    ExplicitRefs.Store
 
   build-depends:
     base >= 4.7 && < 5,
