CONTINUATION-PASSING-5.9: Add a store

--- a/solutions/05-ch5/interpreters/haskell/CONTINUATION-PASSING-5.9/continuation-passing.cabal
+++ b/solutions/05-ch5/interpreters/haskell/CONTINUATION-PASSING-5.9/continuation-passing.cabal
@@ -21,6 +21,7 @@ library
     Interpreter
     Lexer
     Parser
+    Store
 
 
 test-suite tests
@@ -43,3 +44,4 @@ test-suite tests
     Test.InterpreterSpec
     Test.LexerSpec
     Test.ParserSpec
+    Test.StoreSpec
