CONTINUATION-PASSING-5.9: Rewrite IMPLICIT-REFS using CPS

--- a/solutions/05-ch5/interpreters/haskell/CONTINUATION-PASSING-5.9/continuation-passing.cabal
+++ b/solutions/05-ch5/interpreters/haskell/CONTINUATION-PASSING-5.9/continuation-passing.cabal
@@ -17,6 +17,7 @@ library
 
   exposed-modules:
     AST
+    CPSInterpreter
     Env
     Interpreter
     Lexer
@@ -41,6 +42,7 @@ test-suite tests
     parsec
 
   other-modules:
+    Test.CPSInterpreterSpec
     Test.InterpreterSpec
     Test.LexerSpec
     Test.ParserSpec
