THREADS: Add a queue

--- a/solutions/05-ch5/interpreters/haskell/THREADS/threads.cabal
+++ b/solutions/05-ch5/interpreters/haskell/THREADS/threads.cabal
@@ -21,6 +21,7 @@ library
     Interpreter
     Lexer
     Parser
+    Queue
     Store
 
 
@@ -44,4 +45,5 @@ test-suite tests
     Test.InterpreterSpec
     Test.LexerSpec
     Test.ParserSpec
+    Test.QueueSpec
     Test.StoreSpec
